# ztm-rust

./: post.md
examples/from-scratch/: Cargo.toml  linker.ld
examples/from-scratch/src/: main.rs  nrf52.rs
