[package]
name = "from-scratch"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]

# Uncomment the following section to enable optimizations for size,
# rather than the default optimization level of `3`.

[profile.release]
codegen-units   = 1
debug           = true
incremental     = false
lto             = true
opt-level       = 's'
panic           = "abort"
